--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -55,6 +55,9 @@
     <Filter Include="sonia.utility\range">
       <UniqueIdentifier>{8f6f7125-96ce-4429-9228-69649c7e6e96}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sonia.services\async">
+      <UniqueIdentifier>{d0ebef30-37ad-4f67-8b9d-3d5d592fde5e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\sonia\shared_ptr.hpp">
@@ -300,6 +303,12 @@
     <ClInclude Include="..\..\..\sonia\utility\optimized\array.hpp">
       <Filter>sonia.utility\optimized</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\services\async\reactor.hpp">
+      <Filter>sonia.services\async</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\functional\range_equal.hpp">
+      <Filter>sonia.functional</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp">
@@ -352,6 +361,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\utility\assert_handler.cpp">
       <Filter>sonia.utility</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\services\async\async_reactor.cpp">
+      <Filter>sonia.services\async</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
